--- a/index.html
+++ b/index.html
@@ -34,5 +34,199 @@
             loading="lazy"
         >
     </div>
+
+    <div class="relative inline-block mb-8">
+    <button class="w-32 h-32 md:w-48 md:h-48 flex items-center justify-center relative rounded-full 
+                   transition-transform duration-100 ease-in-out
+                   hover:scale-105 hover:rotate-0.1 hover:shadow-md">
+        <!-- Background Circle -->
+        <img src="hero-circle.png" alt="Background" class="w-full h-full object-contain shadow-2xl rounded-full">
+        
+        <!-- Microphone -->
+        <img src="microphone.png" alt="Microphone" class="absolute w-1/2 h-1/2 object-contain pointer-events-none">
+    </button>
+    
+    <!-- New Badge -->
+    <span class="absolute top-1 right-1 bg-green-400 text-black text-xs font-bold px-2 py-1 rounded-full animate-pulse">
+        NEW
+    </span>
+</div>
+
+    <!-- Heading -->
+    <h1 class="text-4xl md:text-6xl font-bold mb-4">
+        TechWave
+    </h1>
+
+    <!-- Subtext -->
+    <p class="text-gray-400 max-w-xl mx-auto mb-8">
+        Your daily dose of tech insights, productivity hacks, and personal growth 
+    </p>
+
+    <!-- CTA buttons -->
+    <div class="flex flex-col sm:flex-row justify-center gap-4">
+        <button class="btn-gradient px-8 py-3 rounded-full font-bold flex items-center justify-center">
+            <i class="fab fa-spotify mr-2"></i>
+            Listen on Spotify
+        </button>
+
+        <button class="border border-purple-500 px-8 py-3 rounded-full font-bold transition hover:bg-purple-500/20">
+            Subscribe
+        </button>
+    </div>
+</section>
+
+
+    <section class="py-16 px-6 max-w-7xl mx-auto">
+        <div class="text-center mb-12">
+            <h2 class="text-3xl font-bold mb-4">About The Podcast</h2>
+            <p class="text-gray-400 max-w-2xl mx-auto">
+                TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. 
+                We break down complex topics into digestible insights, explore productivity strategies that actually work, and share stories of personal growth from industry leaders.
+                <br>
+                <br>
+Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+            </p>
+        </div>
+
+        <div class="grid grid-cols-2 lg:grid-cols-4 gap-8 text-center">
+            <div>
+                <div class="text-3xl font-bold text-green-400">150K+</div>
+                <div class="text-xs text-gray-500 uppercase tracking-widest mt-2">Monthly Listeners</div>
+            </div>
+            <div>
+                <div class="text-3xl font-bold text-green-400">200+</div>
+                <div class="text-xs text-gray-500 uppercase tracking-widest mt-2">Episodes Published</div>
+            </div>
+            <div>
+                <div class="text-3xl font-bold text-green-400">4.9★</div>
+                <div class="text-xs text-gray-500 uppercase tracking-widest mt-2">Average Rating</div>
+            </div>
+            <div>
+                <div class="text-3xl font-bold text-green-400">50+</div>
+                <div class="text-xs text-gray-500 uppercase tracking-widest mt-2">Industry Experts</div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <section class="max-w-7xl mx-auto px-6 py-20 bg-[#0f0524] text-white">
+  <h2 class="text-4xl font-bold text-center mb-16">
+    Why Choose <span class="text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-purple-500">TechWave</span>
+  </h2>
+
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:grid-rows-2">
+
+    <div class="lg:row-span-2 bg-[#1a0b38] rounded-3xl p-10 flex flex-col justify-start border border-white/5 hover:border-purple-500/50 transition-all duration-300 group shadow-xl">
+      <div class="mb-6 w-14 h-14 flex items-center justify-center rounded-xl bg-gradient-to-br from-pink-500 to-purple-600 group-hover:scale-110 transition-transform">
+        <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 18.5a6 6 0 006-6v-5a6 6 0 00-12 0v5a6 6 0 006 6z"/><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 11v1a7 7 0 01-14 0v-1m7 9v1m-3 0h6"/></svg>
+      </div>
+      <h3 class="text-2xl font-bold mb-4">Premium Audio Quality</h3>
+      <p class="text-gray-400 leading-relaxed text-sm md:text-base">
+        Experience crystal-clear sound with professional-grade recording and
+        expert audio engineering. Every episode is mastered for optimal
+        listening across all devices and platforms.
+      </p>
+    </div>
+
+    <div class="lg:col-span-2 bg-[#1a0b38] rounded-3xl p-8 border border-white/5 hover:border-purple-500/50 transition-all shadow-xl flex items-start space-x-6">
+      <div class="flex-shrink-0 text-pink-500 mt-1">
+        <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"/></svg>
+      </div>
+      <div>
+        <h3 class="text-xl font-bold mb-2">Mobile Friendly</h3>
+        <p class="text-gray-400 text-sm leading-relaxed">
+          Listen on the go with seamless mobile experience and offline downloads.
+        </p>
+      </div>
+    </div>
+
+    <div class="lg:col-span-2 bg-[#1a0b38] rounded-3xl p-8 border border-white/5 hover:border-purple-500/50 transition-all shadow-xl flex items-start space-x-6">
+      <div class="flex-shrink-0 text-purple-500 mt-1">
+        <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064"/></svg>
+      </div>
+      <div>
+        <h3 class="text-xl font-bold mb-2">Global Community</h3>
+        <p class="text-gray-400 text-sm leading-relaxed">
+          Connect with tech enthusiasts from over 120 countries worldwide.
+        </p>
+      </div>
+    </div>
+
+    <div class="md:col-span-2 bg-[#1a0b38] rounded-3xl p-10 border border-white/5 hover:border-purple-500/50 transition-all shadow-xl group">
+      <div class="flex items-center space-x-4 mb-6">
+        <div class="text-yellow-400 group-hover:animate-pulse">
+           <svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24"><path d="M13 10V3L4 14h7v7l9-11h-7z"/></svg>
+        </div>
+        <h3 class="text-2xl font-bold">Exclusive Interviews</h3>
+      </div>
+      <p class="text-gray-400 leading-relaxed">
+        Get unprecedented access to industry titans, startup founders, and tech
+        visionaries. Deep dives into real journeys, failures, and success strategies that you won't find anywhere else.
+      </p>
+    </div>
+
+    <div class="bg-[#1a0b38] rounded-3xl p-10 border border-white/5 hover:border-purple-500/50 transition-all shadow-xl flex flex-col justify-center">
+      <div class="text-pink-500 mb-4">
+        <svg class="w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/></svg>
+      </div>
+      <h3 class="text-xl font-bold mb-2">Rich Resources</h3>
+      <p class="text-gray-400 text-sm leading-relaxed">
+        Access show notes, transcripts, and additional learning materials.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+    <section class="py-16 px-6 max-w-7xl mx-auto">
+        <h2 class="text-3xl font-bold text-center mb-12">Featured Episodes</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="card-bg rounded-3xl overflow-hidden group">
+                <div class="relative h-48 bg-gray-800 flex items-center justify-center">
+                    <img src="https://images.unsplash.com/photo-1589254065878-42c9da997008?auto=format&fit=crop&w=800&q=80" class="w-full h-full object-cover opacity-60" alt="AI">
+                    <a href="https://youtu.be/uQ0LGwPBC2c?si=1IK1rh0RiWErN5oJ" class="absolute w-12 h-12 btn-gradient rounded-full flex items-center justify-center transition-transform group-hover:scale-110">
+                        <i class="fas fa-play text-white"></i>
+                    </a>
+                </div>
+                <div class="p-6">
+                    <h3 class="text-lg font-bold mb-2">The Future of AI in Everyday Life</h3>
+                    <p class="text-gray-400 text-sm mb-4">Exploring how artificial intelligence is transforming our daily routines and work-life balance.</p>
+                    <div class="text-green-400 text-xs font-bold"><i class="far fa-clock mr-1"></i> 42 min</div>
+                </div>
+            </div>
+            <div class="card-bg rounded-3xl overflow-hidden group">
+                <div class="relative h-48 bg-gray-800 flex items-center justify-center">
+                    <img src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?auto=format&fit=crop&w=800&q=80" class="w-full h-full object-cover opacity-60" alt="Remote Work">
+                    <a href="https://youtu.be/uQ0LGwPBC2c?si=1IK1rh0RiWErN5oJ" class="absolute w-12 h-12 btn-gradient rounded-full flex items-center justify-center transition-transform group-hover:scale-110">
+                        <i class="fas fa-play text-white"></i>
+                    </a>
+                </div>
+                <div class="p-6">
+                    <h3 class="text-lg font-bold mb-2">Building Better Habits for Remote Work</h3>
+                    <p class="text-gray-400 text-sm mb-4">Practical strategies for staying productive and maintaining mental health in a home office.</p>
+                    <div class="text-green-400 text-xs font-bold"><i class="far fa-clock mr-1"></i> 35 min</div>
+                </div>
+            </div>
+            <div class="card-bg rounded-3xl overflow-hidden group">
+                <div class="relative h-48 bg-gray-800 flex items-center justify-center">
+                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=800&q=80" class="w-full h-full object-cover opacity-60" alt="Career">
+                    <a href="https://youtu.be/uQ0LGwPBC2c?si=1IK1rh0RiWErN5oJ" class="absolute w-12 h-12 btn-gradient rounded-full flex items-center justify-center transition-transform group-hover:scale-110">
+                        <i class="fas fa-play text-white"></i>
+                    </a>
+                </div>
+                <div class="p-6">
+                    <h3 class="text-lg font-bold mb-2">Career Growth in Tech: A Roadmap</h3>
+                    <p class="text-gray-400 text-sm mb-4">From junior to lead: an engaging talk on how to navigate the modern tech career landscape.</p>
+                    <div class="text-green-400 text-xs font-bold"><i class="far fa-clock mr-1"></i> 51 min</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
