--- a/index.html
+++ b/index.html
@@ -228,5 +228,45 @@ Join thousands of young professionals and tech enthusiasts who start their day w
             </div>
         </div>
     </section>
-</body>
-</html>
+
+    <section class="py-16 px-6 max-w-5xl mx-auto">
+        <h2 class="text-3xl font-bold text-center mb-12">Meet The Host</h2>
+        <div class="card-bg p-8 md:p-12 rounded-3xl flex flex-col md:flex-row items-center gap-8">
+            <img src="host.png"  alt="Alex Kumar">
+            <div class="text-center md:text-left">
+                <h3 class="text-2xl font-bold mb-2">Alex Kumar</h3>
+                <p class="text-gray-400 text-sm leading-relaxed mb-6">
+                    Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.
+                </p>
+                <div class="flex justify-center md:justify-start space-x-4">
+                    <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-pink-500 transition"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-pink-500 transition"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-pink-500 transition"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="relative py-12 px-6 border-t border-white/10">
+    <!-- Background Image -->
+    <img src="footer-bg.png" alt="Footer Background" class="absolute inset-0 w-full h-full object-cover -z-10">
+
+    <div class="max-w-7xl mx-auto text-center relative">
+        <div class="text-2xl font-bold mb-6">
+            Tech<span class="gradient-text">Wave</span>
+        </div>
+
+        <div class="flex flex-wrap justify-center gap-6 text-sm text-gray-400 mb-8">
+            <a href="#" class="hover:text-white"><i class="fab fa-spotify mr-1"></i> Spotify</a>
+            <a href="#" class="hover:text-white"><i class="fab fa-apple mr-1"></i> Apple Podcasts</a>
+            <a href="#" class="hover:text-white"><i class="fab fa-youtube mr-1"></i> YouTube</a>
+            <a href="#" class="hover:text-white"><i class="fab fa-twitter mr-1"></i> Twitter</a>
+        </div>
+
+        <hr class="border-white/5 mb-8">
+
+        <p class="text-xs text-gray-500">
+            &copy; 2026 TechWave Podcast. All rights reserved.
+        </p>
+    </div>
+</footer>
