--- a/index.html
+++ b/index.html
@@ -3,7 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TechWave </title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        body {
+            background-color: #0f0524;
+            color: #ffffff;
+            font-family: 'Inter', sans-serif;
+        }
+        .gradient-text {
+            background: linear-gradient(to right, #f472b6, #a855f7);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .btn-gradient {
+            background: linear-gradient(to right, #f472b6, #a855f7);
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+        .btn-gradient:hover {
+            transform: scale(1.05);
+            opacity: 0.9;
+        }
+        .card-bg {
+            background: rgba(125, 25, 255, 0);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        
+    </style>
 </head>
 <body class="overflow-x-hidden">
 
@@ -270,3 +297,7 @@ Join thousands of young professionals and tech enthusiasts who start their day w
         </p>
     </div>
 </footer>
+
+
+</body>
+</html>
