--- a/index.html
+++ b/index.html
@@ -53,14 +53,18 @@
 
     <section class="relative py-20 px-6 text-center overflow-hidden">
     <!-- Background decoration -->
-    <div class="absolute inset-0 flex items-center justify-center pointer-events-none opacity-30">
-        <img 
-            src="hero-bg.png" 
-            alt="decorative wave"
-            class="w-4/4  object-contain"
-            loading="lazy"
-        >
-    </div>
+    <div class="absolute inset-0 pointer-events-none opacity-30 overflow-hidden">
+    <img 
+        src="hero-bg.png"
+        alt="decorative wave"
+        class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 
+               w-[150%] md:w-[120%] lg:w-[100%] 
+               max-w-none 
+               h-auto object-contain"
+        loading="lazy"
+    >
+</div>
+
 
     <div class="relative inline-block mb-8">
     <button class="w-32 h-32 md:w-48 md:h-48 flex items-center justify-center relative rounded-full 
