--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@ Join thousands of young professionals and tech enthusiasts who start their day w
         </div>
     </section>
 
+    <!-- footer -->
+     
     <footer class="relative py-12 px-6 border-t border-white/10">
     <!-- Background Image -->
     <img src="footer-bg.png" alt="Footer Background" class="absolute inset-0 w-full h-full object-cover -z-10">
